--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
         <div style="height: 1.2em;"></div>
 
-        <img src="Assets/Banner_1500x1500.png" style="width: 100%;">
+        <div style="width: 100%; align-content: center; display: flex;">
+            <img src="Assets/Banner_1500x1500.png" style="width: 60%; margin: auto;">
+        </div>
 
-        <div style="height: 1.2em;"></div>
+        <h2>O mně:</h2>
 
         <div class="collapsible-parent">
             <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(58, 205, 255) 0%, rgb(90, 209, 225) 100%);">
