--- a/index.html
+++ b/index.html
@@ -134,10 +134,7 @@
                     <div class="contacts-right">
                         <img src="Assets/Image_377x524.jpg" class="contacts-image">
                     </div>
-                    <div class="contacts-left">
-        
-                        <h2 style="margin-top: 0;">Kontakt:</h2>
-        
+                    <div class="contacts-left" style="align-self: center;">        
                         <b>Mgr. Kateřina Jordánková</b>
                         <br>
                         Dům lékařských služeb ( 2.patro )<br>
