--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body onload="onLoad()">
     <div class="parent-of-all">
+        
+                <div style="width: 100%; align-content: center; display: flex;">
+                    <img src="Assets/Banner_1500x1500.png" style="width: 60%; margin: auto;">
+                </div>
         <div class="header">
             <div class="header-content">
                 <div class="header-image-parent">
@@ -18,42 +22,32 @@
                 </div>
 
                 <div class="header-name-parent">
-                    <a class="header-name">Kateřina Jordánková</a>
-                    <a class="header-description">Fyzioterapie</a>
+                    <a class="header-name">helprehafit</a>
                 </div>
 
             </div>
         </div>
 
-        <div style="height: 1.2em;"></div>
-
-        <div style="width: 100%; align-content: center; display: flex;">
-            <img src="Assets/Banner_1500x1500.png" style="width: 60%; margin: auto;">
-        </div>
-
-        <h2>O mně:</h2>
+        <div style="height: 1.9em;"></div>
 
         <div class="collapsible-parent">
-            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(58, 205, 255) 0%, rgb(90, 209, 225) 100%);">
+            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(58, 205, 255) 0%, rgb(99, 172, 216) 100%);">
                 <div class="collapsible-header-content">
-                    <a class="collapsible-header-text">Vzdělání</a>
+                    <a class="collapsible-header-text">O mně</a>
                     <img src="Assets/Caret_down.png" class="collapsible-header-caret">
                 </div>
             </button>
             <div class="collapsible-content">
+
+                <h2>Vzdělání:</h2>
+
                 <ul>
                     <li>2001 ukončení bakalářského studia na LF MU Brno Specializace ve zdravotnictví, obor Zdravotní vědy, směr Fyzioterapie a léčebná rehabilitace</li>
                     <li>2003 ukončení magisterského studia na LF MU Brno Specializace ve zdravotnictví, obor Zdravotní vědy, směr Fyzioterapie a léčebná rehabilitace</li>
                 </ul>
-            </div>
-            <div style="height: 0.5em;"></div>
-            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(97, 209, 216) 0%, rgb(104, 209, 190) 100%);">
-                <div class="collapsible-header-content">
-                    <a class="collapsible-header-text">Praxe</a>
-                    <img src="Assets/Caret_down.png" class="collapsible-header-caret">
-                </div>
-            </button>
-            <div class="collapsible-content">
+
+                <h2>Praxe:</h2>
+
                 <ul>
                     <li>IN Boskovice a.s.</li>
                     <li>Sdružení osob s poruchami hybnosti a komunikace Jihlava</li>
@@ -66,15 +60,9 @@
                     <li>OLÚ Jevíčko</li>
                     <li>Chironax Invest s.r.o. Brno</li>
                 </ul>
-            </div>
-            <div style="height: 0.5em;"></div>
-            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(104, 209, 182) 0%, rgb(105, 208, 154) 100%);">
-                <div class="collapsible-header-content">
-                    <a class="collapsible-header-text">Kurzy</a>
-                    <img src="Assets/Caret_down.png" class="collapsible-header-caret">
-                </div>
-            </button>
-            <div class="collapsible-content">
+
+                <h2>Kurzy:</h2>
+
                 <ul>
                     <li>Certifikovaný kurz Diagnostika a terapie funkčních poruch hybného systému Brno</li>
                     <li>Certifikovaný kurz Fyzioterapie u dysfunkce pánevního dna a inkontinence Čelákovice</li>
@@ -98,12 +86,10 @@
                     <li>Školící akce MUDr. Lewitta  CKP Dobřichovice</li>
                 </ul>
             </div>
-        </div>
 
-        <div style="height: 1.5em;"></div>
+            <div style="height: 0.5em;"></div>
 
-        <div class="collapsible-parent">
-            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(105, 208, 130) 0%, rgb(108, 212, 101) 100%);">
+            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(104, 161, 209) 0%, rgb(126, 125, 188) 100%);">
                 <div class="collapsible-header-content">
                     <a class="collapsible-header-text">Ceník</a>
                     <img src="Assets/Caret_down.png" class="collapsible-header-caret">
@@ -111,19 +97,21 @@
             </button>
             <div class="collapsible-content">
                 <div style="height: 0.5em;"></div>
-                30 min      500 Kč<br>
-                60 min      900 Kč<br>
+                * 30 min      600 Kč<br>
+                * 60 min      900 Kč<br>
                 <br>
-                Expres termín do 24h  30 min 1000Kč / 60 min 1800Kč<br>
+                * Manuální symetrizace a harmonizace celého těla 90 min 1500 Kč<br>
                 <br>
-                * Manuální symetrizace a harmonizace celého těla 90 min  1500 Kč<br>
+                * Expres termín do 24h  30 min 1200 Kč / 60 min 1800 Kč<br>
                 <br>
                 Služby jsou hrazeny klientem v hotovosti na místě. <br>
                 Po dohodě lze vystavit za poskytované služby fakturu.<br>
                 V současné době nepřijímám platební karty.
             </div>
+
             <div style="height: 0.5em;"></div>
-            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(111, 219, 94) 0%, rgb(66, 187, 66) 100%);">
+
+            <button class="collapsible-header" style="background: linear-gradient(180deg, rgb(139, 124, 187) 0%, rgb(186, 69, 186) 100%);">
                 <div class="collapsible-header-content">
                     <a class="collapsible-header-text">Kontakt</a>
                     <img src="Assets/Caret_down.png" class="collapsible-header-caret">
@@ -132,9 +120,9 @@
             <div class="collapsible-content">
                 <div class="contacts-parent" >
                     <div class="contacts-right">
-                        <img src="Assets/Image_377x524.jpg" class="contacts-image">
+                        <img src="Assets/Image_377x524.png" class="contacts-image">
                     </div>
-                    <div class="contacts-left" style="align-self: center;">        
+                    <div class="contacts-left" style="align-self: center;">
                         <b>Mgr. Kateřina Jordánková</b>
                         <br>
                         Dům lékařských služeb ( 2.patro )<br>
