--- a/index.html
+++ b/index.html
@@ -96,17 +96,26 @@
                 </div>
             </button>
             <div class="collapsible-content">
-                <div style="height: 0.5em;"></div>
-                * 30 min      600 Kč<br>
-                * 60 min      900 Kč<br>
-                <br>
-                * Manuální symetrizace a harmonizace celého těla 90 min 1500 Kč<br>
-                <br>
-                * Expres termín do 24h  30 min 1200 Kč / 60 min 1800 Kč<br>
-                <br>
-                Služby jsou hrazeny klientem v hotovosti na místě. <br>
-                Po dohodě lze vystavit za poskytované služby fakturu.<br>
-                V současné době nepřijímám platební karty.
+                <div style="width: 95%; margin: auto;">
+                    <div style="height: 0.5em;"></div>
+                    <div style="display: flex;">
+                        <div style="width: 60%; padding-right: 1em;">
+                            * 30 min      600 Kč<br>
+                            * 60 min      900 Kč<br>
+                            <br>
+                            * Manuální symetrizace a harmonizace celého těla 90 min 1500 Kč<br>
+                            <br>
+                            * Expres termín do 24h  30 min 1200 Kč / 60 min 1800 Kč<br>
+                            <br>
+                            Služby jsou hrazeny klientem v hotovosti na místě. <br>
+                            Po dohodě lze vystavit za poskytované služby fakturu.<br>
+                            V současné době nepřijímám platební karty.
+                        </div>
+                        <div style="width: 40%; align-self: center;">
+                            <img src="Assets/Spine_1784x2448.jpg" class="contacts-image">
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div style="height: 0.5em;"></div>
