--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
             </div>
             <div class="name-parent">
-                <a class="name-text">Kateřina Jordánková</a>
+                <a class="name-text">Mgr. Kateřina Jordánková</a>
             </div>
         </div>
 
@@ -51,17 +51,33 @@
     <div class="contacts-parent">
         <img src="Assets/Image_377x524.jpg" class="contacts-image">
         <div class="contacts-text">
-            <b>Mgr. Kateřina Jordánková</b><br>
+            <b style="font-size: 1.2em;">Mgr. Kateřina Jordánková</b><br>
             <br>
-            Dům lékařských služeb ( 2.patro )<br>
-            B. Smetany 1123/24<br>
-            680 01  Boskovice<br>
             <br>
-            <b>E-mail:</b> jordankova.katerina@seznam.cz<br>
+            Dům lékařských služeb ( 2.patro )
             <br>
-            <b>Stránky:</b> <a href="https://helprehafit.cz" style="color: var(--colors-primary);">helprehafit.cz</a><br>
+            B. Smetany 1123/24
             <br>
-            <b>Telefon:</b> +420 603 293 778<br>
+            680 01  Boskovice
+            <br>
+            <br>
+            <br>
+            <br>
+            E-mail: <b>jordankova.katerina@seznam.cz</b>
+            <br>
+            <br>
+            <a href="https://helprehafit.cz" style="color: var(--colors-primary);">www.helprehafit.cz</a><br>
+            <br>
+            <br>
+            <br>
+            Telefon: <b style="font-size: 1.2em;">+420 603 293 778</b>
+            <br>
+        </div>
+        <div class="contacts-text-2">
+
+        </div>
+        <div class="contacts-text-3">
+
         </div>
     </div>
     
