--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
             </div>
             <div class="name-parent">
-                <a class="name-text">Kateřina Jordánková</a>
+                <a class="name-text">Mgr. Kateřina Jordánková</a>
             </div>
         </div>
 
