--- a/pricing.html
+++ b/pricing.html
@@ -27,7 +27,7 @@
 
             </div>
             <div class="name-parent">
-                <a class="name-text">Kateřina Jordánková</a>
+                <a class="name-text">Mgr. Kateřina Jordánková</a>
             </div>
         </div>
 
@@ -51,31 +51,46 @@
     <!-- Content -->
     <table class="pricing-content">
         <tr>
-            <td style="padding-right: 1em;">30 min</td>
-            <td>600 Kč</td>
+            <td>Terapie</td>
+            <td>30 min</td>
+            <td></td>
+            <td></td><td></td>
+            <td class="pricing-text-right">600 Kč</td>
         </tr>
         <tr>
-            <td style="padding-right: 1em;">60 min</td>
-            <td>900 Kč</td>
+            <td>Terapie</td>
+            <td>60 min</td>
+            <td></td>
+            <td></td><td></td>
+            <td class="pricing-text-right">900 Kč</td>
         </tr>
         <tr>
-            <td style="padding-right: 1em;">Manuální symetrizace a harmonizace celého těla 90 min      </td>
-            <td>1500 Kč</td>
+            <td>Manuální symetrizace a harmonizace celého těla</td>
+            <td>90 min</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="pricing-text-right">1500 Kč</td>
         </tr>
-        <tr>
-            <td style="padding-right: 1em;"><b>Expres termín do 24h  30 min 1200 Kč / 60 min</b></td>
-            <td>1800 Kč</td>
+        <tr">
+            <td class="pricing-text-express"><b>Expres termín do 24h</b></td>
+            <td class="pricing-text-express">30 min</td>
+            <td class="pricing-text-express">1200 Kč </td>
+            <td class="pricing-text-right pricing-text-express">/</td>
+            <td class="pricing-text-right pricing-text-express"> 60 min</td>
+            <td class="pricing-text-right pricing-text-express"> 1800 Kč</td>
         </tr>
     </table>
 
+    <img src="Assets/Spine_1784x2448.jpg" class="pricing-image">
+
     <a class="pricing-text">
         <br>
-        Služby jsou hrazeny klientem v hotovosti na místě. <br>
-        Po dohodě lze vystavit za poskytované služby fakturu.<br>
+        Služby jsou hrazeny klientem v hotovosti na místě.
+        Po dohodě lze vystavit za poskytované služby fakturu.
         V současné době nepřijímám platební karty.
     </a>
 
-    <img src="Assets/Spine_1784x2448.jpg" class="pricing-image">
     
 </body>
 </html>
