--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="name-parent">
-                <a class="name-text">Kateřina Jordánková</a>
+                <a class="name-text">Mgr. Kateřina Jordánková</a>
             </div>
         </div>
 
