--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
             <li>Kurz v neinvazivní laserové terapii Brno</li>
             <li>Kurz stabilizace páteře teorie, praxe Praha</li>
             <li>Kurz Diagnostika a terapie závratí Dobřichovice</li>
-            <li>Podiatrické minimum – vyšetření na podoskopu a systémem PodoCam 2.0 MEDsport Hradec Králové</li>
+            <li>Podiatrické minimum – vyšetření na podoskopu a systémem PodoCam 2.0<br> MEDsport Hradec Králové</li>
             <li>Úrazy a onemocnění lokte Brno</li>
             <li>Kurz základy první pomoci dle Guidelines 2010</li>
             <li>Kurz akupunktury IPVZ Praha</li>
