--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             Kontakt
         </button>
     </div>
+    <div style="height: 1.9em;"></div>
+    <div style="width: 100%; text-align: center;"> <a class="index-text"> Pomoc při potížích pohybového aparátu, regenerace, rekondice, preventivní programy </a></div>
 
     <!--
     <div class="contacts-parent">
