--- a/pricing.html
+++ b/pricing.html
@@ -72,13 +72,21 @@
             <td></td>
             <td class="pricing-text-right">1500 Kč</td>
         </tr>
-        <tr">
+        <tr class="hide-mobile">
             <td class="pricing-text-express"><b>Expres termín do 24h</b></td>
             <td class="pricing-text-express">30 min</td>
             <td class="pricing-text-express">1200 Kč </td>
             <td class="pricing-text-right pricing-text-express">/</td>
             <td class="pricing-text-right pricing-text-express"> 60 min</td>
             <td class="pricing-text-right pricing-text-express"> 1800 Kč</td>
+        </tr>
+        <tr class="show-mobile">
+            <td class="pricing-text-express"><b>Expres termín do 24h</b></td>
+            <td class="pricing-text-express">30min 1200Kč</td>
+            <td class="pricing-text-express"></td>
+            <td class="pricing-text-right pricing-text-express">/</td>
+            <td class="pricing-text-right pricing-text-express"></td>
+            <td class="pricing-text-right pricing-text-express"> 60min 1800Kč</td>
         </tr>
     </table>
 
