--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 
         <div style="height: 1.9em;"></div>
     </div>
-
+    <div style="height: 1.9em;"></div>
+    <div style="width: 100%; text-align: center;"> 
+        <a class="index-text"> Pomoc při potížích pohybového aparátu, regenerace, rekondice, preventivní programy </a>
+    </div>
+    
     <div class="ButtonMenu">
         <button class="LinkButton" onclick="ChangeLocation('about.html')">
             O mně
@@ -43,8 +47,6 @@
             Kontakt
         </button>
     </div>
-    <div style="height: 1.9em;"></div>
-    <div style="width: 100%; text-align: center;"> <a class="index-text"> Pomoc při potížích pohybového aparátu, regenerace, rekondice, preventivní programy </a></div>
 
     <!--
     <div class="contacts-parent">
