--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,10 @@
     </div>
 
     <!-- Content -->
+    <div class="BacklinkParent" style="width: 64.5%;">
+        <a class="BackLink" href="index.html">Zpět</a>
+    </div>
+
     <div class="contacts-parent">
         <img src="Assets/Image_377x524.jpg" class="contacts-image">
         <div class="contacts-text">
