--- a/pricing.html
+++ b/pricing.html
@@ -49,6 +49,10 @@
     </div>
 
     <!-- Content -->
+    <div class="BacklinkParent">
+        <a class="BackLink" href="index.html">Zpět</a>
+    </div>
+    
     <table class="pricing-content">
         <tr>
             <td>Terapie</td>
