--- a/about.html
+++ b/about.html
@@ -48,6 +48,10 @@
     </div>
 
     <!-- Content -->
+    <div class="BacklinkParent">
+        <a class="BackLink" href="index.html">Zpět</a>
+    </div>
+
     <div class="about-content">
         <h2>Vzdělání:</h2>
 
