--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Content -->
-    <div class="BacklinkParent" style="width: 64.5%;">
+    <div class="BacklinkParent">
         <a class="BackLink" href="index.html">Zpět</a>
     </div>
 
