První vyčištění stránek
Jelikož to vypadá, že na tomhle bude pracovat více lidí, než jen já, vyčistil jsem rychle některé věci, aby tu nebyly zbytečně nepoužité soubory atd.

--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rehafit</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="Assets/Logo_1382x1382.png">
-    <script src="index.js"></script>
-    <link rel="stylesheet" id="switcher-id" href="Assets/Themes/themes-light.css">
+    <link rel="icon" href="Resources/Images/Logo_1382x1382.png">
+    
+    <link rel="stylesheet" href="Resources/Styles/main.css">
+    <link rel="stylesheet" id="switcher-id" href="Resources/Styles/Themes/themes-light.css">
 </head>
 <body>
     <!-- Header -->
     <div class="parent-of-all">
         <div style="width: 100%; align-content: center; display: flex;">
-            <img src="Assets/Banner_1500x1500.png" style="width: 60%; margin: auto;">
+            <img src="Resources/Images/Banner_1500x1500.png" style="width: 60%; margin: auto;">
         </div>
         <div class="header">
             <div class="header-content">
                 <div class="header-image-parent">
-                    <img src="Assets/Logo_1382x1382.png" alt="logo" class="header-image" onclick="ChangeLocation('index.html')">
+                    <img src="Resources/Images/Logo_1382x1382.png" alt="logo" class="header-image" onclick="ChangeLocation('index.html')">
                 </div>
 
                 <div class="header-name-parent">
@@ -36,15 +36,15 @@
     <!-- Menu -->
 
     <div class="ButtonMenu">
-        <button class="LinkButton" onclick="ChangeLocation('about.html')">
+        <a class="LinkButton" href="about.html">
             O mně
-        </button>
-        <button class="LinkButton" onclick="ChangeLocation('pricing.html')">
+        </a>
+        <a class="LinkButton" href="pricing.html">
             Ceník
-        </button>
-        <button class="LinkButton active" onclick="ChangeLocation('contact.html')">
+        </a>
+        <a class="LinkButton" href="contact.html">
             Kontakt
-        </button>
+        </a>
     </div>
 
     <!-- Content -->
@@ -53,7 +53,7 @@
     </div>
 
     <div class="contacts-parent">
-        <img src="Assets/Image_377x524.jpg" class="contacts-image">
+        <img src="Resources/Images/Image_377x524.jpg" class="contacts-image">
         <div class="contacts-text">
             <b style="font-size: 1.2em;">Mgr. Kateřina Jordánková</b><br>
             <br>
